# Adeept-4-DOF-Robot-for-Caligraphy

./: .gitignore  README.md  adeept_kin_server.py
adeept_arduino/: robot.cpp  robot.ino
adeept_arduino/robot/: robot.ino
adeept_command/: CMakeLists.txt  package.xml  setup.py
adeept_command/launch/: command.launch
adeept_command/src/: AdeeptKinFK.srv  AdeeptVelIK.srv  adeept_FK_server.py  adeept_IK_server.py  adeept_VK_server.py  adeept_connector.py  adeept_kin_server.py  adeept_vk_server.py  get_homogeneous.py  helper.py  joints_pos_controller.py  joints_vel_controller.py  switch_control.py
adeept_command/srv/: AdeeptHomoMatrix.srv  AdeeptKinIK.srv  AdeeptVelFK.srv  CheckKinIK.srv
adeept_control/: CMakeLists.txt  package.xml
adeept_control/config/: adeept_control.yaml
adeept_control/launch/: adeept_control.launch
adeept_description/: CMakeLists.txt  package.xml
adeept_description/config/: joint_names_adeept.yaml
adeept_description/launch/: adeept.rviz  adeept_rviz.launch
adeept_description/meshes/: Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  base_link.STL
adeept_description/urdf/: adeept.gazebo  adeept.xacro  adeept_description.csv  adeept_description.gazebo  adeept_description.xacro  materials.xacro
adeept_gazebo/: CMakeLists.txt  package.xml
adeept_gazebo/launch/: adeept_world.launch
adeept_path/: CMakeLists.txt  RBE501_project_alphabet.m  package.xml  setup.py  trajectory_alphabet.py
adeept_path/src/: alphabet_trajectory.py  draw_alphabet.py  plot_trajectory.py
adeept_path/srv/: DrawAlphabet.srv  DrawSentence.srv
