<package>
  <name>adeept_gazebo</name>
  <version>0.0.0</version>
  <description>The adeept_gazebo package</description>

  <maintainer email="team@todo.todo">team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>adeept_control</run_depend>
  <run_depend>adeept_description</run_depend>
  <run_depend>xacro</run_depend>

  <export></export>
</package>
